[project]
name = "payments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "laiduc95", email = "laiduc.info@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.137.1",
]

[project.scripts]
payments = "payments:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
